# OpenGL_proj

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
docs/: DEVELOPER_GUIDE_CN.md  GETTING_STARTED.md
include/: camera.hpp  city_scene.hpp  mesh.hpp  model.hpp  shader.hpp
include/glad/: glad.h
resource/NightSkyHDRI003_1K/: NightSkyHDRI003_1K.tres
resource/PavingStones144_1K-PNG/: PavingStones144_1K-PNG.blend  PavingStones144_1K-PNG.mtlx  PavingStones144_1K-PNG.tres  PavingStones144_1K-PNG.usdc
resource/source-Guangzhou CTF Finance Centre/: obj.mtl
shader/: base.frag  base.vert  lampshader.frag  lampshader.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
src/: glad.c  main.cpp
src/core/: app_context.hpp
src/effects/: water.hpp
src/render/: lighting.hpp
src/resources/: model.cpp  model_loader.hpp  texture.cpp  texture.hpp
src/scene/: city_scene.cpp  city_scene.hpp  mesh.cpp  simple_mesh.cpp  simple_mesh.hpp  skybox.cpp  skybox.hpp
